# websocket_bevy

./: Cargo.toml
src/: client.rs  main.rs  server.rs  shared.rs
