[package]
name = "websocket_bevy"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy={version="0.13"}
bevy_eventwork = {git="https://github.com/vertec-io/bevy_eventwork", branch="main"}
bevy_states = {git ="https://github.com/stuxbet/Bevy_states.git", branch="main"}
bevy_eventwork_mod_websockets = {git="https://github.com/vertec-io/bevy_eventwork_mod_websockets", branch="main"}
serde = { version = "1.0.203", features = ["derive"] }
url = "2.5.0"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[features]
client=[]
